--- a/QR Wifi 417 Elm/QR Wifi 417 Elm/MainWindow.xaml
+++ b/QR Wifi 417 Elm/QR Wifi 417 Elm/MainWindow.xaml
@@ -1,12 +1,25 @@
-﻿<Window x:Class="QR_Wifi_417_Elm.MainWindow"
+﻿<Window x:Name="WifiQRCode" x:Class="QR_Wifi_417_Elm.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QR_Wifi_417_Elm"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Wifi QR Codes" Height="435.333" Width="449.334">
+    <TabControl HorizontalAlignment="Left" Height="364" Margin="23,18,0,0" VerticalAlignment="Top" Width="404">
+        <TabItem x:Name="TabTulsa" Header="Tulsa">
+            <Grid Background="#FFE5E5E5">
+                <Button x:Name="btnTulsaGen" Content="Generate" HorizontalAlignment="Left" VerticalAlignment="Top" Width="60" Margin="328,268,0,0" Height="26"/>
+                <Button x:Name="btnTulsaSave" Content="Save" HorizontalAlignment="Left" VerticalAlignment="Top" Width="60" Margin="328,300,0,0" Height="26"/>
+                <Image x:Name="imgTulsa" HorizontalAlignment="Left" Height="239" Margin="24,24,0,0" VerticalAlignment="Top" Width="283"/>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TabNorman" Header="Norman">
+            <Grid x:Name="tabQR" Background="#FFE5E5E5">
+                <Button x:Name="btnNormanGen" Content="Generate" HorizontalAlignment="Left" VerticalAlignment="Top" Width="60" Margin="328,269,0,0" Height="26"/>
+                <Button x:Name="btnNormanSave" Content="Save" HorizontalAlignment="Left" VerticalAlignment="Top" Width="60" Margin="328,300,0,0" Height="26"/>
+                <Image x:Name="imgNorman" HorizontalAlignment="Left" Height="239" Margin="24,24,0,0" VerticalAlignment="Top" Width="283"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
